# AR-nanoTabPFN

./: .gitignore  CITATION.bib  README.md  model.py  pyproject.toml  train.py
ar_tabpfn/: train.py
ar_tabpfn/configs/: train_tabular_online.yaml
ar_tabpfn/data/: data.py  mlp_scm.py
ar_tabpfn/model/: attention.py  inference.py  model.py  triton_kernels.py
ar_tabpfn/tests/: test_inference_vs_forward.py  test_pipeline.py  test_triton_gpu.py  test_triton_joint_density.py  test_triton_kernel.py  visualize_masks.py
autoregressive_nano_tabpfn/: __init__.py  train.py
autoregressive_nano_tabpfn/configs/: train_tabular_online.yaml
autoregressive_nano_tabpfn/data/: mlp_scm.py  online_dataset.py  tabular_sampler.py
autoregressive_nano_tabpfn/model/: attention.py  inference.py  model.py  triton_kernels.py
autoregressive_nano_tabpfn/tests/: test_inference_vs_forward.py  test_pipeline.py  test_triton_kernel.py  visualize_masks.py
scripts/: test_triton_gpu.py
